@@ -1,7 +1,7 @@
 LEGAL NOTICE INFORMATION
 ------------------------
 
-i18n-inflector-rails is Copyright (C) 2010 by Paweł Wilk.
+i18n-inflector-rails is Copyright (C) 2011 by Paweł Wilk.
 
 i18n-inflector-rails is copyrighted software owned by Paweł Wilk
 (pw@gnu.org). You may redistribute and/or modify this
